@@ -48,6 +48,8 @@ such as local-site-url, local-contact-phone, etc.
 	<LI>Added fcntl.h include, needed by open(). Problem reported by 
 Seth Chaiklin <seth@psy.au.dk>. Also fixed quoting in the configure.in related
 to log file.
+	<LI>Finished splitting up logging functions and changes to use the 
+Context structure.
 </UL>
 
 <P><H3>New in version 3.5:</H3><UL>
